spade-tests/src/snapshots/spade_tests__ast_lowering__struct_self_pattern_replaced_types_work.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct Foo<T, U, #uint N> {
    t: T,
    u: [U; N],
}

impl<T> Foo<T, bool, 2> {
    fn foo(self) -> (T, [bool; 2]) {
        match self {
            Self$(t, u: [(), ()]) => (t, false),
        }
    }
}


error: Expected type Foo<_, bool, 2>, got Foo<_, (), 2>
  ┌─ testinput:9:13
  │
6 │ impl<T> Foo<T, bool, 2> {
  │                ---- Type bool inferred here
  ·
9 │             Self$(t, u: [(), ()]) => (t, false),
  │             ^^^^^^^^^^^^^^^^^^^^^
  │             │            │
  │             │            Type () inferred here
  │             Expected Foo<_, bool, 2>
  │
  = note: Expected: bool
                in: Foo<_, bool, 2>
               Got: ()
                in: Foo<_, (), 2>
